samples/_failures_safe/1761153812_c61a89_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c98db1bc.c: In function ‘main’:
./samples/SAFE/__tmp_c98db1bc.c:129:9: error: expected declaration or statement at end of input
  129 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_c98db1bc.c:129:9: error: expected declaration or statement at end of input
